Api endpoint (#21)
Added new endpoints, with backend
