# swagger_server/models/average_work_time_body.py
@@ -1,0 +1,148 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class AverageWorkTimeBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, id_karty: str=None, imie: str=None, nazwisko: str=None, sredni_czas_pracy: int=None):  # noqa: E501
+        """AverageWorkTimeBody - a model defined in Swagger
+
+        :param id_karty: The id_karty of this AverageWorkTimeBody.  # noqa: E501
+        :type id_karty: str
+        :param imie: The imie of this AverageWorkTimeBody.  # noqa: E501
+        :type imie: str
+        :param nazwisko: The nazwisko of this AverageWorkTimeBody.  # noqa: E501
+        :type nazwisko: str
+        :param sredni_czas_pracy: The sredni_czas_pracy of this AverageWorkTimeBody.  # noqa: E501
+        :type sredni_czas_pracy: int
+        """
+        self.swagger_types = {
+            'id_karty': str,
+            'imie': str,
+            'nazwisko': str,
+            'sredni_czas_pracy': int
+        }
+
+        self.attribute_map = {
+            'id_karty': 'id_karty',
+            'imie': 'imie',
+            'nazwisko': 'nazwisko',
+            'sredni_czas_pracy': 'sredni_czas_pracy'
+        }
+        self._id_karty = id_karty
+        self._imie = imie
+        self._nazwisko = nazwisko
+        self._sredni_czas_pracy = sredni_czas_pracy
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'AverageWorkTimeBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The average-work-time_body of this AverageWorkTimeBody.  # noqa: E501
+        :rtype: AverageWorkTimeBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id_karty(self) -> str:
+        """Gets the id_karty of this AverageWorkTimeBody.
+
+        The ID of the card that accessed the zone.  # noqa: E501
+
+        :return: The id_karty of this AverageWorkTimeBody.
+        :rtype: str
+        """
+        return self._id_karty
+
+    @id_karty.setter
+    def id_karty(self, id_karty: str):
+        """Sets the id_karty of this AverageWorkTimeBody.
+
+        The ID of the card that accessed the zone.  # noqa: E501
+
+        :param id_karty: The id_karty of this AverageWorkTimeBody.
+        :type id_karty: str
+        """
+
+        self._id_karty = id_karty
+
+    @property
+    def imie(self) -> str:
+        """Gets the imie of this AverageWorkTimeBody.
+
+        The first name of the employee.  # noqa: E501
+
+        :return: The imie of this AverageWorkTimeBody.
+        :rtype: str
+        """
+        return self._imie
+
+    @imie.setter
+    def imie(self, imie: str):
+        """Sets the imie of this AverageWorkTimeBody.
+
+        The first name of the employee.  # noqa: E501
+
+        :param imie: The imie of this AverageWorkTimeBody.
+        :type imie: str
+        """
+
+        self._imie = imie
+
+    @property
+    def nazwisko(self) -> str:
+        """Gets the nazwisko of this AverageWorkTimeBody.
+
+        The last name of the employee.  # noqa: E501
+
+        :return: The nazwisko of this AverageWorkTimeBody.
+        :rtype: str
+        """
+        return self._nazwisko
+
+    @nazwisko.setter
+    def nazwisko(self, nazwisko: str):
+        """Sets the nazwisko of this AverageWorkTimeBody.
+
+        The last name of the employee.  # noqa: E501
+
+        :param nazwisko: The nazwisko of this AverageWorkTimeBody.
+        :type nazwisko: str
+        """
+
+        self._nazwisko = nazwisko
+
+    @property
+    def sredni_czas_pracy(self) -> int:
+        """Gets the sredni_czas_pracy of this AverageWorkTimeBody.
+
+        The duration of the average work time in seconds.  # noqa: E501
+
+        :return: The sredni_czas_pracy of this AverageWorkTimeBody.
+        :rtype: int
+        """
+        return self._sredni_czas_pracy
+
+    @sredni_czas_pracy.setter
+    def sredni_czas_pracy(self, sredni_czas_pracy: int):
+        """Sets the sredni_czas_pracy of this AverageWorkTimeBody.
+
+        The duration of the average work time in seconds.  # noqa: E501
+
+        :param sredni_czas_pracy: The sredni_czas_pracy of this AverageWorkTimeBody.
+        :type sredni_czas_pracy: int
+        """
+
+        self._sredni_czas_pracy = sredni_czas_pracy
